login page alignment to screen fix

--- a/src/pages/Auth/Auth.module.css
+++ b/src/pages/Auth/Auth.module.css
@@ -91,6 +91,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height:100vh;
   }
   .heading{
       display: flex;
